handling not loaded API

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,14 @@
 /obj/Debug/NF4SMath.xml
 /obj/Debug/TempPE/My Project.Application.Designer.vb.dll
 /obj/Debug/TempPE/My Project.Resources.Designer.vb.dll
+/obj/Release/DesignTimeResolveAssemblyReferencesInput.cache
+/obj/Release/NF4SMath.Resources.resources
+/obj/Release/NF4SMath.dll
+/obj/Release/NF4SMath.pdb
+/obj/Release/NF4SMath.vbproj.AssemblyReference.cache
+/obj/Release/NF4SMath.vbproj.CoreCompileInputs.cache
+/obj/Release/NF4SMath.vbproj.FileListAbsolute.txt
+/obj/Release/NF4SMath.vbproj.GenerateResource.cache
+/obj/Release/NF4SMath.xml
+/obj/Release/TempPE/My Project.Application.Designer.vb.dll
+/obj/Release/TempPE/My Project.Resources.Designer.vb.dll
