new funcs for part. masses ratios and factors

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /obj/Release/NF4SMath.xml
 /obj/Release/TempPE/My Project.Application.Designer.vb.dll
 /obj/Release/TempPE/My Project.Resources.Designer.vb.dll
+.vs/NF4SMath/v16/.suo
